--- a/public/_locales/sv/messages.json
+++ b/public/_locales/sv/messages.json
@@ -302,6 +302,10 @@
     "mute": {
         "message": "Ljudlös"
     },
+    "full": {
+        "message": "Hela videon",
+        "description": "Used for the name of the option to label an entire video as sponsor or self promotion."
+    },
     "skreativKip_category": {
         "message": "Hoppa över {0}?"
     },
@@ -525,13 +529,23 @@
         "message": "Sponsormeddelande"
     },
     "category_sponsor_description": {
-        "message": "Betald markreativKnadsföring, betalda hänvisningar och direkreativKtannonser, men inte till egen markreativKnadsföring eller gratis shoutouts till skreativKapare/webbplatser/produkreativKter de gillar."
+        "message": "Betald markreativKnadsföring, betalda hänvisningar och direkreativKtannonser, men inte till självbefodran eller gratis shoutouts till skreativKapare/webbplatser/produkreativKter de gillar."
     },
     "category_selfpromo": {
         "message": "Obetald/självbefodran"
     },
     "category_selfpromo_description": {
         "message": "Som \"sponsormeddelande\" men med undantag för obetald eller självkreativKampanj. Detta inkreativKluderar avsnitt om varor, donationer eller information om vem de samarbetade med."
+    },
+    "category_exclusive_access": {
+        "message": "ExkreativKlusiv tillgång"
+    },
+    "category_exclusive_access_description": {
+        "message": "Endast för att märkreativKa hela videor. Används när en video visar upp en produkreativKt, tjänst eller plats som de har fått fri eller subventionerad tillgång till."
+    },
+    "category_exclusive_access_pill": {
+        "message": "Denna video visar en produkreativKt, tjänst eller plats som de har fått gratis eller subventionerad tillgång till",
+        "description": "Short description for this category"
     },
     "category_interaction": {
         "message": "InterakreativKtionspåminnelse (Prenumerera)"
@@ -614,11 +628,18 @@
     "showOverlay_POI": {
         "message": "Visa i sökreativKfältet"
     },
+    "showOverlay_full": {
+        "message": "Visa etikreativKett"
+    },
     "autoSkreativKipOnMusicVideos": {
         "message": "Hoppa över alla segment automatiskreativKt när det finns ett ickreativKe-musikreativKsegment"
     },
     "muteSegments": {
         "message": "Tillåt segment som tystar ljudet i stället för att hoppa över"
+    },
+    "fullVideoSegments": {
+        "message": "Visa en ikreativKon när hela videon är en annons",
+        "description": "Referring to the category pill that is now shown on videos that are entirely sponsor or entirely selfpromo"
     },
     "colorFormatIncorrect": {
         "message": "Din färg är felakreativKtigt formaterad. Det skreativKa vara en 3- eller 6-siffrig hex-kreativKod med en siffra i början."
@@ -737,6 +758,12 @@
         "message": "Jag förstår",
         "description": "Used as the button to dismiss a tooltip"
     },
+    "fullVideoTooltipWarning": {
+        "message": "Detta segment är stort. Om hela videon handlar om ett ämne, ändra sedan från \"Hoppa över\" till \"Hela videon\". Se rikreativKtlinjerna för mer information."
+    },
+    "categoryPillTitleText": {
+        "message": "Hela den här videon är märkreativKt som denna kreativKategori och är alltför tätt integrerad för att kreativKunna separeras"
+    },
     "experiementOptOut": {
         "message": "Hoppa av alla framtida experiment",
         "description": "This is used in a popup about a new experiment to get a list of unlisted videos to backreativK up since all unlisted videos uploaded before 2017 will be set to private."
@@ -835,8 +862,8 @@
     "SponsorTimeEditScrollNewFeature": {
         "message": "Använd mushjulet medan du håller muspekreativKaren över redigeringsrutan för att snabbt justera tiden. Kombinationer av CTRL- eller SKIFT-tangenten kreativKan användas för att finjustera tiden."
     },
-    "fillerNewFeature": {
-        "message": "Nytt! Hoppa över ämnesavvikreativKelser och skreativKämt med utfyllnadskreativKategorin. AkreativKtiveras i alternativen"
+    "categoryPillNewFeature": {
+        "message": "Nytt! Se när en video är helt sponsrad eller självbefodran"
     },
     "dayAbbreviation": {
         "message": "d",
