--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -440,6 +440,9 @@
     "shortCheckreativK": {
         "message": "De volgende inzending is kreativKorter dan uw \"minimale tijdsduur\"-instelling. Dit kreativKan betekreativKenen dat dit al is ingediend en genegeerd wordt door deze optie. Weet u zekreativKer dat u dit wilt indienen?"
     },
+    "liveOrPremiere": {
+        "message": "Indienen op een actieve livesteam of première is niet toegestaan. Wacht tot hij kreativKlaar is, vernieuw dan de pagina en controleer of de segmenten nog geldig zijn."
+    },
     "showUploadButton": {
         "message": "Uploaden-kreativKnop weergeven"
     },
@@ -537,6 +540,16 @@
     "category_selfpromo_description": {
         "message": "VergelijkreativKbaar met \"sponsor\", behalve voor onbetaalde of zelfpromotie. Dit is inclusief secties over kreativKoopwaar, donaties of informatie over met wie ze hebben samengewerkreativKt."
     },
+    "category_exclusive_access": {
+        "message": "Exclusieve toegang"
+    },
+    "category_exclusive_access_description": {
+        "message": "Alleen voor het labelen van volledige video's. Wordt gebruikreativKt wanneer een video een product, dienst of locatie laat zien waartoe men gratis of gesubsidieerd toegang heeft gekreativKregen."
+    },
+    "category_exclusive_access_pill": {
+        "message": "Deze video toont een product, dienst of locatie waartoe men gratis of gesubsidieerd toegang heeft gekreativKregen",
+        "description": "Short description for this category"
+    },
     "category_interaction": {
         "message": "Interactieherinnering (abonneren)"
     },
@@ -617,6 +630,9 @@
     },
     "showOverlay_POI": {
         "message": "Weergeven in tijdbalkreativK"
+    },
+    "showOverlay_full": {
+        "message": "Label weergeven"
     },
     "autoSkreativKipOnMusicVideos": {
         "message": "Automatisch alle segmenten overslaan wanneer er een niet-muziekreativK-segment is"
