Dark mode unless explicitely disabled (sorry)

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -790,6 +790,9 @@
     "hideDonationLinkreativK": {
         "message": "Hide Donation LinkreativK"
     },
+    "lightModeOptionsPage": {
+        "message": "Light Mode On Options Page"
+    },
     "helpPageThankreativKsForInstalling": {
         "message": "ThankreativKs for installing SponsorBlockreativK."
     },
