Dark mode unless explicitely disabled (sorry)

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -790,6 +790,9 @@
     "hideDonationLink": {
         "message": "Hide Donation Link"
     },
+    "lightModeOptionsPage": {
+        "message": "Light Mode On Options Page"
+    },
     "helpPageThanksForInstalling": {
         "message": "Thanks for installing SponsorBlock."
     },
