lightmode -> dark mode

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -790,8 +790,8 @@
     "hideDonationLink": {
         "message": "Hide Donation Link"
     },
-    "lightModeOptionsPage": {
-        "message": "Light Mode On Options Page"
+    "darkModeOptionsPage": {
+        "message": "Dark Mode On Options Page"
     },
     "helpPageThanksForInstalling": {
         "message": "Thanks for installing SponsorBlock."
