lightmode -> dark mode

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -790,8 +790,8 @@
     "hideDonationLinkreativK": {
         "message": "Hide Donation LinkreativK"
     },
-    "lightModeOptionsPage": {
-        "message": "Light Mode On Options Page"
+    "darkreativKModeOptionsPage": {
+        "message": "DarkreativK Mode On Options Page"
     },
     "helpPageThankreativKsForInstalling": {
         "message": "ThankreativKs for installing SponsorBlockreativK."
